--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -101,16 +101,23 @@
           <!--/stories-->
           <div class="row">    
             <br>
-            <div class="col-md-2 col-sm-3 text-center">
-                Sign In
+            <div class="col-md-6 col-sm-6">
+                <b>Sign In</b>
+                <form name="signInForm"
+                      action="/auth/signIn"
+                      method="post">
+                    User Name: <input name="userName" id="userName"> <br />
+                    Password:  <input name="password" id="password"> <br />
+                    <input type="submit" value="Sign In">
+                </form>
             </div>
-            <div class="col-md-10 col-sm-9">
-                Sign Up
+            <div class="col-md-6 col-sm-6">
+                <b>Sign Up</b>
                     <form name="signUpForm"
                           action="/auth/signUp"
                           method="post">
-                        <input name="userName" id="userName">
-                        <input name="password" id="password">
+                        User Name: <input name="userName" id="userName"> <br />
+                        Password:  <input name="password" id="password"> <br />
                         <input type="submit" value="Sign Up">
                     </form>
             </div>
@@ -162,7 +169,7 @@
         
       </div>
       <div class="col-sm-6">
-          <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>      
+          <p class="pull-right">Daniel Hac</p>
       </div>
     </div>
   </div>
