--- a/src/views/bookListView.ejs
+++ b/src/views/bookListView.ejs
@@ -46,16 +46,6 @@
                 </li>
                 <%}%>
             </ul>
-            <ul class="nav navbar-right navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-                    <ul class="dropdown-menu" style="padding:12px;">
-                        <form class="form-inline">
-                            <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-                        </form>
-                    </ul>
-                </li>
-            </ul>
         </nav>
     </div>
 </header>
@@ -64,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h1>Storystrap
+                <h1>Node.js
                     <p class="lead"></p>
                 </h1>
             </div>
@@ -127,7 +117,6 @@
                     <!--/stories-->
 
 
-                    <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
 
 
                 </div>
@@ -174,7 +163,7 @@
 
             </div>
             <div class="col-sm-6">
-                <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>
+                <p class="pull-right">By Daniel Hac</p>
             </div>
         </div>
     </div>
