--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -46,16 +46,6 @@
                 </li>
                 <%}%>
             </ul>
-            <ul class="nav navbar-right navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-                    <ul class="dropdown-menu" style="padding:12px;">
-                        <form class="form-inline">
-                            <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-                        </form>
-                    </ul>
-                </li>
-            </ul>
         </nav>
     </div>
 </header>
@@ -64,7 +54,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-7">
-                <h1>Storystrap
+                <h1>Node.js
                     <p class="lead"></p>
                 </h1>
             </div>
@@ -106,15 +96,19 @@
                     <div class="row">
                         <br>
                         <div class="col-md-2 col-sm-3 text-center">
-                            <a class="story-title" href="#"><img alt="" src="<%=book.book.image_url%>" style="width:100px;height:100px" class="img-circle"></a>
+                            <a class="story-title" href="https://www.goodreads.com/book/show/<%=book.book.id%>">
+                                <img alt="" src="<%=book.book.image_url%>">
+                            </a>
+                            <h6><%=book.book.num_pages%> pages</h6>
                         </div>
                         <div class="col-md-10 col-sm-9">
                             <h3><%=book.title%></h3>
                             <div class="row">
                                 <div class="col-xs-9">
-                                    <h4><span class="label label-default"><%=book.author%></span></h4><h4>
-
-                                    </h4></div>
+                                    <h4>
+                                        <span class="label label-default"><%=book.author%></span>
+                                    </h4>
+                                </div>
                                 <div class="col-xs-3"></div>
                             </div>
                             <br><%-book.book.description%><br>
@@ -126,7 +120,7 @@
                     <!--/stories-->
 
 
-                    <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
+                    <a href="https://www.goodreads.com/book/show/<%=book.book.id%>" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
 
 
                 </div>
@@ -173,7 +167,7 @@
 
             </div>
             <div class="col-sm-6">
-                <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>
+                <p class="pull-right">By: Daniel Hac</p>
             </div>
         </div>
     </div>
